feat(pdf)
Implemented techical operations table (section 2)